# ecocoin-back

./: .env  .gitignore  Cargo.toml  README.md
migrations/: 20240528_create_airdrop_log.sql  20250417161033_init.sql
src/: config.rs  db.rs  error.rs  main.rs  solana.rs
src/api/: mod.rs  tasks.rs  user.rs
src/models/: task.rs  user.rs
