[package]
name = "ecocoin-airdrop-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["serde", "v4"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls", "uuid"] }
dotenvy = "0.15"
once_cell = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "1.0"
spl-token = "3.5.0"
solana-client = "1.17.1"
solana-sdk = "1.17.1"
spl-associated-token-account = "1.1.1"
solana-transaction-status = "1.17.1"
tower-http = { version = "0.5", features = ["cors"] }


